- Support for Kafka 2.0.0 in kafka output {pull}8399[8399]
- Add setting `setup.kibana.space.id` to support Kibana Spaces {pull}7942[7942]
- Add Beats Central Management {pull}8559[8559]
- Allow Bus to buffer events in case listeners are not configured. {pull}8527[8527]
- Enable `host` and `cloud` metadata processors by default. {pull}8596[8596]

*Auditbeat*

*Filebeat*

- Make inputsource generic taking bufio.SplitFunc as input {pull}7746[7746]
- Add custom unpack to log hints config to avoid env resolution {pull}7710[7710]
- Make docker input check if container strings are empty {pull}7960[7960]
- Add tag "truncated" to "log.flags" if incoming line is longer than configured limit. {pull}7991[7991]
- Add tag "multiline" to "log.flags" if event consists of multiple lines. {pull}7997[7997]
- Add haproxy module. {pull}8014[8014]
- Release `docker` input as GA. {pull}8328[8328]
- Keep unparsed user agent information in user_agent.original. {pull}8537[8537]
- Better tracking of number of open file descriptors. {pull}7986[7986]
- Added default and TCP parsing formats to HAproxy module {issue}8311[8311] {pull}8637[8637]
- Add Suricata IDS/IDP/NSM module. {issue}8153[8153] {pull}8693[8693]
- Allow to force CRI format parsing for better performance {pull}8424[8424]

*Heartbeat*

- Added autodiscovery support {pull}8415[8415]
- Added support for extra TLS/x509 metadata. {pull}7944[7944]
- Added stats and state metrics for number of monitors and endpoints started. {pull}8621[8621]

*Journalbeat*

- Add journalbeat. {pull}8703[8703]

*Metricbeat*

- Add metrics about cache size to memcached module {pull}7740[7740]
- Add `replstatus` metricset to MongoDB module {pull}7604[7604]
- Move common kafka fields (broker, topic and partition.id) to the module level to facilitate events correlation {pull}7767[7767]
- Add `metircs` metricset to MongoDB module. {pull}7611[7611]